--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-screens": "^3.5.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-query": "^3.19.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
